--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "advent_of_code"
 version = "0.1.0"
 edition = "2024"
 
+[profile.dev.package.nalgebra]
+opt-level = 1
+
 [features]
 default = ["parallel", "interactive"]
 parallel = ["rayon"]
@@ -13,13 +16,30 @@ aoc_2021 = { path = "aoc_2021" }
 aoc_2022 = { path = "aoc_2022" }
 aoc_2023 = { path = "aoc_2023" }
 aoc_2024 = { path = "aoc_2024" }
+aoc_2025 = { path = "aoc_2025" }
 common = { path = "common" }
-pattern_parse = { path = "pattern_parse" }
 
 clap = { version = "4.0.29", features = ["cargo"] }
 rayon = { version = "1.6.1", optional = true }
 tui = { version = "0.19.0", optional = true }
 crossterm = { version = "0.25.0", optional = true }
 anyhow = "1.0.75"
-thiserror = "1.0.47"
+thiserror = "1.0.37"
 clap_derive = "4.4.2"
+
+[workspace]
+members = [
+    "aoc_2021",
+    "aoc_2022",
+    "aoc_2023",
+    "aoc_2024",
+    "aoc_2025",
+    "common",
+    "pattern_parse"
+]
+
+[workspace.dependencies]
+ahash = "0.8.3"
+bitflags = "2.4.0"
+thiserror = "1.0.37"
+nalgebra = "0.33"
