--- a/aoc_2022/Cargo.toml
+++ b/aoc_2022/Cargo.toml
@@ -6,10 +6,11 @@ edition = "2024"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ahash = "0.8.3"
-bitflags = "2.4.0"
 common = { path = "../common" }
+pattern_parse = { path = "../pattern_parse" }
+
+ahash = { workspace = true }
+bitflags = { workspace = true }
+thiserror = { workspace = true }
 grid = "0.9.0"
-pattern_parse = { version = "0.1.0", path = "../pattern_parse" }
 rayon = "1.7.0"
-thiserror = "1.0.37"
